# referat-spacy

./: pyproject.toml  spacy-referat.ipynb
data/: example_en.txt  taz.json
